# iNeuralProphet

./: .gitignore  README.md  main.py  pyproject.toml
data/: SF_hospital_load.csv  tutorial04.csv  wp_log_peyton_manning.csv
guides/: 01-基于收集数据集的建模和预测.ipynb  02-测试和交叉验证.ipynb  04-不确定性量化建模.ipynb  05-条件季节性.ipynb  06-乘法季节性.ipynb  07-稀疏自回归.ipynb  09-超参选择.ipynb  10-训练过程中实时绘图.ipynb
tutorials/: .lr_find_592802af-896e-4001-a4a2-64a00aa95409.ckpt  01-快速开始.ipynb  02-基础模型.ipynb  03-趋势回归.ipynb  04-季节回归.ipynb  05-自回归器.ipynb  06-滞后回归器.ipynb  07-未来回归器.ipynb  08-事件和假期.ipynb  09-不确定性建模.ipynb  11-验证和可重复.ipynb
