[project]
name = "ineuralprophet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter-dash>=0.4.2",
    "neuralprophet>=0.9.0",
    "notebook>=7.4.5",
    "plotly>=6.3.0",
    "statsmodels>=0.14.5",
]
